--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
 recursive-include docs *.rst
 recursive-include openstack_auth/locale *
 recursive-include openstack_auth/tests/templates *.html
+
+include LICENSE
+include README.rst
