--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,9 @@ setenv = VIRTUAL_ENV={envdir}
          NOSE_OPENSTACK_RED=0.05
          NOSE_OPENSTACK_YELLOW=0.025
          NOSE_OPENSTACK_SHOW_ELAPSED=1
-deps = mox
-commands = python setup.py test
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
+commands = python openstack_auth/tests/run_tests.py
 
 [testenv:pep8]
 commands = flake8
@@ -38,4 +39,4 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # H4xx docstrings
 # H701 empty localization string
 # H702  Formatting operation should be outside of localization method call
-ignore = E121,E126,E127,E128,E501,E502,F403,F841,F999,H201,H301,H306,H302,H303,H304,H4,H701,H702
+ignore = E121,E126,E127,E128,E501,E502,F403,F841,F999,H201,H301,H306,H302,H303,H304,H4,H701,H702,H803
