--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,12 @@ source-dir = doc/source
 [nosetests]
 verbosity=2
 detailed-errors=1
+
+[extract_messages]
+keywords = _ gettext ngettext l_ lazy_gettext
+mapping_file = babel.cfg
+output_file = openstack_auth/locale/openstack_auth.pot
+
+[compile_catalog]
+directory = openstack_auth/locale
+domain = django
