--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py26,py27,py27dj14,pep8,py33
+envlist = py26,py27,py27dj14,py27dj15,pep8,py33
 
 [testenv]
 usedevelop = True
@@ -16,11 +16,13 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = python openstack_auth/tests/run_tests.py
 
+[testenv:py27dj15]
+commands = pip install django>=1.5,<1.6
+           python openstack_auth/tests/run_tests.py
+
 [testenv:py27dj14]
-deps = pbr>=0.5.21,<1.0
-       Django==1.4
-       python-keystoneclient>=0.3.2
-       -r{toxinidir}/test-requirements.txt
+commands = pip install django==1.4
+           python openstack_auth/tests/run_tests.py
 
 [testenv:pep8]
 commands = flake8
