--- a/tox.ini
+++ b/tox.ini
@@ -36,10 +36,6 @@ downloadcache = ~/cache/pip
 [flake8]
 builtins = _
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py
-# E121 continuation line indentation is not a multiple of four
-# E126 continuation line over-indented for hanging indent
-# E127 continuation line over-indented for visual indent
-# E128 continuation line under-indented for visual indent
 # F401 '<smth>' imported but unused
 # F403 'from <smth> import *' used; unable to detect undefined names
 # F841 local variable '<smth>' is assigned to but never used
@@ -51,4 +47,4 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # H4xx docstrings
 # H701 empty localization string
 # H702  Formatting operation should be outside of localization method call
-ignore = E121,E126,E127,E128,E501,E502,F403,F841,F999,H201,H301,H306,H302,H303,H304,H4,H701,H702,H803
+ignore = E501,E502,F403,F841,F999,H201,H301,H306,H302,H303,H304,H4,H701,H702,H803
