Fix H306 imports not in alphabetical order
Remove the following rules from ignore list
without any violations from these:
H201,H302,H303,H701,H702,H803

A part of blueprint openstack-hacking-compliant

Change-Id: I4e43e13234f7640ef216db168d873c4cc1198328

--- a/tox.ini
+++ b/tox.ini
@@ -36,11 +36,7 @@ downloadcache = ~/cache/pip
 [flake8]
 builtins = _
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py
-# H201 no 'except:' at least use 'except Exception:'
-# H302 import only modules.'from optparse import make_option' does not import a module
-# H303 No wildcard (*) import.
+# H301 one import per line
 # H304 No relative imports. 'from .views import IndexView' is a relative import
 # H4xx docstrings
-# H701 empty localization string
-# H702  Formatting operation should be outside of localization method call
-ignore = H201,H301,H306,H302,H303,H304,H4,H701,H702,H803
+ignore = H301,H304,H4
