Fix H301 and H304 hacking issues
H301 one import per line                                                                            |
H304 No relative imports

When checking imports DJANGO_SETTINGS_MODULE environment needs to
be set. Add the following to tox.ini testenv:pep8.

    setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings

A part of blueprint openstack-hacking-compliant

Change-Id: I65a23c1e9a5d7a5852d448651254b6a3866f1dd3

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ commands = pip install django>=1.4,<1.5
            python openstack_auth/tests/run_tests.py
 
 [testenv:pep8]
+setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
 commands = flake8
 
 [testenv:venv]
@@ -40,8 +41,16 @@ downloadcache = ~/cache/pip
 [flake8]
 builtins = _
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py
-# H301 one import per line
-# H304 No relative imports. 'from .views import IndexView' is a relative import
 # H4xx docstrings
 # H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
-ignore = H301,H304,H4,H803
+ignore = H4,H803
+
+[hacking]
+import_exceptions = django.conf.settings,
+                    django.core.urlresolvers.reverse,
+                    django.conf.urls.include,
+                    django.conf.urls.patterns,
+                    django.conf.urls.url,
+                    django.utils.translation.pgettext_lazy,
+                    django.utils.translation.ugettext_lazy,
+                    django.utils.translation.ungettext_lazy,
