Fix H4xx docstring issues
Completes blueprint openstack-hacking-compliant

Change-Id: Ib286972b65e0e3282db483718421f7f28e8c6cd1

--- a/tox.ini
+++ b/tox.ini
@@ -41,9 +41,8 @@ downloadcache = ~/cache/pip
 [flake8]
 builtins = _
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py
-# H4xx docstrings
 # H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
-ignore = H4,H803
+ignore = H803
 
 [hacking]
 import_exceptions = django.conf.settings,
