--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,10 @@ commands = flake8
 [testenv:venv]
 commands = {posargs}
 
+[testenv:docs]
+setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
+commands = python setup.py build_sphinx
+
 [tox:jenkins]
 downloadcache = ~/cache/pip
 
