Fix translation setup
Update .tx/config with all options.

Add update_catalog target to setup.cfg - like it's done for all other
projects that translate messages.

Change-Id: I0f72cb48c9693e812ca21f50f4c2b04894411307

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,3 +43,8 @@ output_file = openstack_auth/locale/openstack_auth.pot
 [compile_catalog]
 directory = openstack_auth/locale
 domain = django
+
+[update_catalog]
+domain = django
+output_dir = openstack_auth/locale
+input_file = openstack_auth/locale/openstack_auth.pot
