Use the latest Django 1.4 release to test
This patch modifies tox.ini file to use the latest Django 1.4
release to test django-openstack-auth.

Change-Id: I6b9203d02aee79339f933eef5765de76901d2ecb
Closes-Bug: #1308123

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands = pip install django>=1.5,<1.6
            python openstack_auth/tests/run_tests.py
 
 [testenv:py27dj14]
-commands = pip install django==1.4
+commands = pip install django>=1.4,<1.5
            python openstack_auth/tests/run_tests.py
 
 [testenv:pep8]
