--- a/tox.ini
+++ b/tox.ini
@@ -43,4 +43,5 @@ exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,p
 # H301 one import per line
 # H304 No relative imports. 'from .views import IndexView' is a relative import
 # H4xx docstrings
-ignore = H301,H304,H4
+# H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
+ignore = H301,H304,H4,H803
