--- a/tox.ini
+++ b/tox.ini
@@ -41,8 +41,10 @@ downloadcache = ~/cache/pip
 [flake8]
 builtins = _
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py
+# H405 multi line docstring summary not separated with an empty line
 # H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
-ignore = H803
+# H904 Wrap long lines in parentheses instead of a backslash
+ignore = H405,H803,H904
 
 [hacking]
 import_exceptions = django.conf.settings,
