Move to hacking 0.10
Release notes:
http://git.openstack.org/cgit/openstack-dev/hacking/tag/?id=0.10.0

Per the release notes, H803 and H904 has been removed.

Change-Id: I93c184f4f0483fd0ba605c87453e26c52f700a42

--- a/tox.ini
+++ b/tox.ini
@@ -42,9 +42,7 @@ downloadcache = ~/cache/pip
 builtins = _
 exclude =  .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,panel_template,dash_template,local_settings.py
 # H405 multi line docstring summary not separated with an empty line
-# H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
-# H904 Wrap long lines in parentheses instead of a backslash
-ignore = H405,H803,H904
+ignore = H405
 
 [hacking]
 import_exceptions = django.conf.settings,
