Allow running individual tests via tox
Allow passing a test module name via the tox command line to allow
running individual tests.

Change-Id: Iff551d054e2a8252f437f6756760cd4418abcfa4

--- a/tox.ini
+++ b/tox.ini
@@ -14,15 +14,15 @@ setenv = VIRTUAL_ENV={envdir}
          NOSE_OPENSTACK_SHOW_ELAPSED=1
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = python openstack_auth/tests/run_tests.py
+commands = python openstack_auth/tests/run_tests.py {posargs}
 
 [testenv:py27dj15]
 commands = pip install django>=1.5,<1.6
-           python openstack_auth/tests/run_tests.py
+           python openstack_auth/tests/run_tests.py {posargs}
 
 [testenv:py27dj14]
 commands = pip install django>=1.4,<1.5
-           python openstack_auth/tests/run_tests.py
+           python openstack_auth/tests/run_tests.py {posargs}
 
 [testenv:pep8]
 setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
