--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py27,py27dj14,py27dj15,py27dj16,pep8,py33,py34
+envlist = py27,py27dj17,py27dj18,pep8,py33,py34
 
 [testenv]
 usedevelop = True
@@ -24,21 +24,18 @@ commands =
     python -m coverage html --include='openstack_auth/*' --omit='openstack_auth/tests/*' -d 'reports'
     python -m coverage xml --include='openstack_auth/*' --omit='openstack_auth/tests/*'
 
-[testenv:py27dj16]
-commands = pip install django>=1.6,<1.7
+[testenv:py27dj17]
+commands = pip install django>=1.7,<1.8
            python openstack_auth/tests/run_tests.py {posargs}
 
-[testenv:py27dj15]
-commands = pip install django>=1.5,<1.6
-           python openstack_auth/tests/run_tests.py {posargs}
-
-[testenv:py27dj14]
-commands = pip install django>=1.4,<1.5
+[testenv:py27dj18]
+commands = pip install django>=1.8,<1.9
            python openstack_auth/tests/run_tests.py {posargs}
 
 [testenv:pep8]
 setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
 commands = flake8
+
 
 [testenv:venv]
 commands = {posargs}
