--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@
 # process, which may cause wedges in the gate later.
 pbr>=0.6,!=0.7,<1.0
 Django>=1.4.2,<1.8
-oslo.config>=1.9.3,<1.10.0  # Apache-2.0
+oslo.config>=1.9.3  # Apache-2.0
 python-keystoneclient>=1.1.0
 six>=1.9.0
