Adding 1.6 job for tox
Default test run is against Django 1.7, adding job for Django 1.6

Change-Id: Ic63bad1ef7bf8e19ec1aae48ca4eb52fa1ef2dfd

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py27,py27dj14,py27dj15,pep8,py33,py34
+envlist = py27,py27dj14,py27dj15,py27dj16,pep8,py33,py34
 
 [testenv]
 usedevelop = True
@@ -15,6 +15,10 @@ setenv = VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = python openstack_auth/tests/run_tests.py {posargs}
+
+[testenv:py27dj16]
+commands = pip install django>=1.6,<1.7
+           python openstack_auth/tests/run_tests.py {posargs}
 
 [testenv:py27dj15]
 commands = pip install django>=1.5,<1.6
