Add Coverage Reports To DOA
Run coverage reports with `tox -ecover`
Creates xml and html reports like horizon
     * changed html destination to 'reports', like horizon

Closes-Bug: 1470203
Change-Id: I91b96eaf9a50e6d199e08d019ff5519a2e0574d5

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,14 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = python openstack_auth/tests/run_tests.py {posargs}
 
+[testenv:cover]
+setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
+commands =
+    python -m coverage erase
+    python -m coverage run openstack_auth/tests/run_tests.py  {posargs}
+    python -m coverage html --include='openstack_auth/*' --omit='openstack_auth/tests/*' -d 'reports'
+    python -m coverage xml --include='openstack_auth/*' --omit='openstack_auth/tests/*'
+
 [testenv:py27dj16]
 commands = pip install django>=1.6,<1.7
            python openstack_auth/tests/run_tests.py {posargs}
