Fix the py27dj19 tests
- Wrap the expected_url variable in a django 1.9 condition so that it
  returns as expected.
- Use request.GET/request.POST instead of request.REQUEST
- Remove some conditional code required for old Django versions

This is the first step in getting Horizon to fully support Django 1.9.
It does *not* yet aim to offer full support, which is why the
requirements have not been bumped.

Change-Id: I7f8f3cde92cafdb5c9134baf75fc736cbf35ff6a
Partially-Implements: blueprint drop-dj17
Depends-On: Ia6cbbc281732e9c466edeaa76739122e006a997e

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py27,py27dj17,py27dj18,pep8,py33,py34
+envlist = py27,py27dj18,pep8,py33,py34
 
 [testenv]
 usedevelop = True
@@ -23,10 +23,6 @@ commands =
     python -m coverage run openstack_auth/tests/run_tests.py  {posargs}
     python -m coverage html --include='openstack_auth/*' --omit='openstack_auth/tests/*' -d 'reports'
     python -m coverage xml --include='openstack_auth/*' --omit='openstack_auth/tests/*'
-
-[testenv:py27dj17]
-commands = pip install django>=1.7,<1.8
-           python openstack_auth/tests/run_tests.py {posargs}
 
 # Django 1.8 is LTS
 [testenv:py27dj18]
