Add py27dj19 tox env
This adds a failing Django 1.9 tox env. This will be followed by a
non-voting Jenkins job to show the tests failing, and then a follow up
patch to make them pass.

Also removes an extra blank line.

Change-Id: Ib1633fb90a3a1f2e064b9f8a3fa37d76c63650be

--- a/tox.ini
+++ b/tox.ini
@@ -28,14 +28,18 @@ commands =
 commands = pip install django>=1.7,<1.8
            python openstack_auth/tests/run_tests.py {posargs}
 
+# Django 1.8 is LTS
 [testenv:py27dj18]
 commands = pip install django>=1.8,<1.9
+           python openstack_auth/tests/run_tests.py {posargs}
+
+[testenv:py27dj19]
+commands = pip install django>=1.9,<1.10
            python openstack_auth/tests/run_tests.py {posargs}
 
 [testenv:pep8]
 setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
 commands = flake8
-
 
 [testenv:venv]
 commands = {posargs}
