--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py27,py27dj18,pep8,py33,py34
+envlist = py27,py27dj18,pep8,py34
 
 [testenv]
 usedevelop = True
