Add Django 1.10 tox env
This will be used for a non-voting test run by infra.

Change-Id: Ic9ddd926e13c5d701bbc4df740c6d51f1d7ba30f

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,10 @@ commands = pip install django>=1.8,<1.9
 commands = pip install django>=1.9,<1.10
            python openstack_auth/tests/run_tests.py {posargs}
 
+[testenv:py27dj110]
+commands = pip install django --pre --upgrade
+           /bin/bash run_tests.sh -N --no-pep8 {posargs}
+
 [testenv:pep8]
 setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
 commands = flake8
