--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,8 @@ commands = pip install django>=1.9,<1.10
            python openstack_auth/tests/run_tests.py {posargs}
 
 [testenv:py27dj110]
-commands = pip install django --pre --upgrade
-           /bin/bash run_tests.sh -N --no-pep8 {posargs}
+commands = pip install django>=1.10,<2.0
+           python openstack_auth/tests/run_tests.py {posargs}
 
 [testenv:pep8]
 setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
