--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-minversion = 1.6
+minversion = 2.0
 skipsdist = True
 envlist = py27,py27dj18,pep8,py34
 
 [testenv]
 usedevelop = True
-install_command = pip install -U {opts} {packages}
-setenv = VIRTUAL_ENV={envdir}
+install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
+setenv = {[env-common]setenv}
          NOSE_WITH_OPENSTACK=1
          NOSE_OPENSTACK_COLOR=1
          NOSE_OPENSTACK_RED=0.05
@@ -16,8 +16,14 @@ deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = python openstack_auth/tests/run_tests.py {posargs}
 
+[env-common]
+setenv = VIRTUAL_ENV={envdir}
+         BRANCH_NAME=master
+         CLIENT_NAME=django_openstack_auth
+
 [testenv:cover]
-setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
+setenv = {[env-common]setenv}
+         DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
 commands =
     python -m coverage erase
     python -m coverage run openstack_auth/tests/run_tests.py  {posargs}
@@ -38,14 +44,16 @@ commands = pip install django>=1.10,<1.11
            python openstack_auth/tests/run_tests.py {posargs}
 
 [testenv:pep8]
-setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
+setenv = {[env-common]setenv}
+         DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
 commands = flake8
 
 [testenv:venv]
 commands = {posargs}
 
 [testenv:docs]
-setenv = DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
+setenv = {[env-common]setenv}
+         DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
 commands = python setup.py build_sphinx
 
 [flake8]
