--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,8 @@ packages =
     openstack_auth
 
 [build_sphinx]
-all_files = 1
+all-files = 1
+warning-is-error = 1
 build-dir = doc/build
 source-dir = doc/source
 
