Add Django 1.11 tox env
Change-Id: I274130c0c24c536dea8f150226c8f7f54c4e5ed5

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,10 @@ commands = pip install django>=1.9,<1.10
 commands = pip install django>=1.10,<1.11
            python openstack_auth/tests/run_tests.py {posargs}
 
+[testenv:py27dj111]
+commands = pip install django>=1.11,<2.0
+           python openstack_auth/tests/run_tests.py {posargs}
+
 [testenv:pep8]
 setenv = {[env-common]setenv}
          DJANGO_SETTINGS_MODULE=openstack_auth.tests.settings
