import zuul job settings from project-config
This is a mechanically generated patch to complete step 1 of moving
the zuul job settings out of project-config and into each project
repository.

Because there will be a separate patch on each branch, the branch
specifiers for branch-specific jobs have been removed.

Because this patch is generated by a script, there may be some
cosmetic changes to the layout of the YAML file(s) as the contents are
normalized.

See the python3-first goal document for details:
https://governance.openstack.org/tc/goals/stein/python3-first.html

Change-Id: Ic8883efd96029d504fbe05ae7fb4ca2e3eb3eb63
Story: #2002586
Task: #24299

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -4,8 +4,21 @@
         - horizon-openstack-tox-py27dj110
         - horizon-openstack-tox-py27dj19
         - horizon-openstack-tox-py27dj18
+        - requirements-check
+        - openstack-tox-pep8
+        - openstack-tox-py27
+        - openstack-tox-py35
+        - build-openstack-sphinx-docs
     gate:
       jobs:
         - horizon-openstack-tox-py27dj110
         - horizon-openstack-tox-py27dj19
         - horizon-openstack-tox-py27dj18
+        - requirements-check
+        - openstack-tox-pep8
+        - openstack-tox-py27
+        - openstack-tox-py35
+        - build-openstack-sphinx-docs
+    post:
+      jobs:
+        - publish-openstack-sphinx-docs
