--- a/tox.ini
+++ b/tox.ini
@@ -5,14 +5,15 @@ envlist = py27,py27dj18,pep8,py34
 
 [testenv]
 usedevelop = True
-install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=stable/ocata} {opts} {packages}
+install_command = pip install {opts} {packages}
 setenv = {[env-common]setenv}
          NOSE_WITH_OPENSTACK=1
          NOSE_OPENSTACK_COLOR=1
          NOSE_OPENSTACK_RED=0.05
          NOSE_OPENSTACK_YELLOW=0.025
          NOSE_OPENSTACK_SHOW_ELAPSED=1
-deps = -r{toxinidir}/requirements.txt
+deps = -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=stable/ocata}
+       -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = python openstack_auth/tests/run_tests.py {posargs}
 
